fix nvidia process icon overflowing....

--- a/src/gpustat/usr/local/emhttp/plugins/gpustat/css/style.css
+++ b/src/gpustat/usr/local/emhttp/plugins/gpustat/css/style.css
@@ -1,40 +1,12 @@
-/*
-  MIT License
-
-  Copyright (c) 2020-2022 b3rs3rk
-
-  Permission is hereby granted, free of charge, to any person obtaining a copy
-  of this software and associated documentation files (the "Software"), to deal
-  in the Software without restriction, including without limitation the rights
-  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-  copies of the Software, and to permit persons to whom the Software is
-  furnished to do so, subject to the following conditions:
-
-  The above copyright notice and this permission notice shall be included in all
-  copies or substantial portions of the Software.
-
-  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-  SOFTWARE.
-*/
 
 #dash_gpustat_settings i, #dash_gpustat_toggle* {
     margin-top: 0;
 }
 
-.gpu-process {
-    width: 150px;
-    display: inline-block;
-}
-
 .gpu-image {
-    padding-left: 8px;
-    height: 32px;
-    width: 32px;
+    padding-left: 4px;
+    height: 18px;
+    width: 18px;
 }
 
 .hidden {
@@ -42,6 +14,6 @@
 }
 
 .gpu-stats-primary {
-    width:80px;
-    display:table-cell;
+    width: 80px;
+    display: table-cell;
 }
